--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "searchable-product-data-table",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/Goran202/Searchable-product-data-table-3.git",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -10,6 +12,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
